--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "express": "^4.18.2",
-    "pino": "^8.7.0"
+    "pino": "^8.7.0",
+    "qrcode-terminal": "^0.12.0"
   }
 }
