--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "zailbreck",
   "license": "ISC",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",
+    "@whiskeysockets/baileys": "^6.3.0",
     "express": "^4.18.2",
     "pino": "^8.7.0",
     "qrcode-terminal": "^0.12.0"
