--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@whiskeysockets/baileys": "^6.3.0",
     "express": "^4.18.2",
+    "libphonenumber-js": "^1.10.36",
     "node-cache": "^5.1.2",
     "pino": "^8.7.0",
     "qrcode-terminal": "^0.12.0"
