--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3'
 
 services:
-  node:
+  app:
     container_name: 'remote_access'
-    image: node:18
+    build: .
     volumes:
-      - ./:/app
+      - .:/usr/app
+      - /usr/app/node_modules
     working_dir: /app
     command:
-      - sh -c "npm install && npm run start"
+#      - sh -c "npm install && npm run start"
     restart: always
     networks:
       proxy_network:
