--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,9 @@ services:
     container_name: 'remote_access'
     build: .
     volumes:
-      - .:/usr/app
-      - /usr/app/node_modules
-    working_dir: /app
-    command:
-#      - sh -c "npm install && npm run start"
+      - ./:/usr/app
+    working_dir: /usr/app
+    command: npm run start
     restart: always
     networks:
       proxy_network:
